# Text2MOO

./: .gitignore  README.md  main.py  pyproject.toml
assets/test_results/: moead.md
data/: data_set.json  gen_data.py
moea/: moead.py  nsga2.py
pipeline/: text2moead.py  text2nsga2.py
prompts/: sys_prompts.py
src/tests/: test_data_convertor.py
src/text2moo/interface/: data_convertor.py  objective_extractor.py
src/text2moo/models/: types.py
src/text2moo/moea/: moead.py  nsga2.py
src/text2moo/pipeline/: text2moead.py  text2nsga2.py
src/text2moo/prompts/: sys_prompts.py
